# cpphots

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: fast_forward.yml
bindings/: CMakeLists.txt  cpphots_module.cpp
cmake/: FindSphinx.cmake  FindTBB.cmake  cpphotsConfig.cmake  cpphotsConfig.cmake.in  cpphotsConfigVersion.cmake.in
data/: trcl0.es
doc/: Doxyfile.in  main.dox
docs/: CMakeLists.txt  Doxyfile.in  conf.py  conf.py.in  index.rst  requirements.txt
examples/: CMakeLists.txt  clustering_benchmark.cpp  commons.h  network_benchmark.cpp  poker_dvs.cpp  ts_benchmark.cpp
include/cpphots/: assert.h  classification.h  clustering.h  clustering_cosine.h  clustering_gmm.h  clustering_utils.h  dynamic_time_surface.h  events_utils.h  gmm_clustering.h  interfaces.h  layer.h  layer_modifiers.h  layer_old.h  layer_traits.h  load.h  network.h  plots.h  run.h  time_surface.h  types.h
include/cpphots/clustering/: cosine.h  gmm.h  kmeans.h  utils.h
include/cpphots/interfaces/: all.h  clonable.h  clustering.h  layer_modifiers.h  streamable.h  time_surface.h
python/: tsplot.py  tsplot_test.py  tsvisualizer.py
src/: CMakeLists.txt  assert.cpp  classification.cpp  clustering.cpp  clustering_cosine.cpp  clustering_gmm.cpp  clustering_utils.cpp  dynamic_time_surface.cpp  events_utils.cpp  events_utils.h  gmm_clustering.cpp  interfaces.cpp  layer.cpp  layer.h  layer_modifiers.cpp  load.cpp  network.cpp  network.h  plots.cpp.in  run.cpp  run.h  time_surface.cpp  time_surface.h  types.cpp
src/clustering/: cosine.cpp  gmm.cpp  kmeans.cpp  utils.cpp
src/interfaces/: clustering.cpp  streamable.cpp
tests/: CMakeLists.txt  classification.test.cpp  commons.h  commons.test.cpp  gmm.test.cpp  interfaces.test.cpp  kmeans.test.cpp  layer.test.cpp  layer_modifiers.test.cpp  network.test.cpp  run.test.cpp  saveload.test.cpp  streamable.test.cpp  timesurface.test.cpp
