add_executable(poker_dvs poker_dvs.cpp)
target_link_libraries(poker_dvs cpphots)

add_executable(ts_benchmark ts_benchmark.cpp)
target_link_libraries(ts_benchmark cpphots)

add_executable(network_benchmark network_benchmark.cpp)
target_link_libraries(network_benchmark cpphots)

add_executable(clustering_benchmark clustering_benchmark.cpp)
target_link_libraries(clustering_benchmark cpphots)